Overcame z-index layering issue

--- a/TeamBIKES/client/s_Style/Slide_In_Panel.styl
+++ b/TeamBIKES/client/s_Style/Slide_In_Panel.styl
@@ -12,6 +12,7 @@ $panel-width-M = 80%
 $panel-width-L = 60%
 $title-panel-height = 75px
 $title-panel-offset = 50px
+base-index = 5
 
 // rem fallback - credits: http://zerosixthree.se/
 calculateRem($size)
@@ -95,6 +96,7 @@ html
   width: 100%
   visibility: hidden
   transition: visibility 0s 0.6s
+  z-index: (base-index - 1)
   &::after
     /* overlay layer */
     position: absolute
@@ -136,7 +138,7 @@ html
   line-height: 50px
   margin: 0
   background: rgba($color-4, 0.96)
-  z-index: 2
+  z-index: (2 + base-index)
   box-shadow: 0 1px 1px rgba(black, 0.08)
   h1.cd
     font-weight: bold
@@ -204,7 +206,7 @@ html
   height: 100%
   top: 0
   background: $color-4
-  z-index: 1
+  z-index: (1 + base-index)
   transition-property(transform)
   transition-duration(0.3s)
   transition-delay(0.3s)
@@ -230,6 +232,7 @@ html
   height: 100%
   padding: ($title-panel-height+20+$title-panel-offset) 5%
   overflow: auto
+  z-index: base-index
   /* smooth scrolling on touch devices */
   -webkit-overflow-scrolling: touch
   p.cd
